--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Home</h1>
         <img src = "images/animatedElaine.gif" alt="animation of Elaine">
         <p>
-            Hello all!!! Welcome !!!
+            Hello all!!! Welcome to my website!!!
         </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Ridiculus mus mauris vitae ultricies leo integer. Et malesuada fames ac turpis egestas. Dictum non consectetur a erat nam at lectus. Gravida arcu ac tortor dignissim convallis aenean et tortor. Magna etiam tempor orci eu. Amet porttitor eget dolor morbi non arcu risus. Ac felis donec et odio pellentesque diam volutpat commodo. Sed turpis tincidunt id aliquet risus feugiat in.
 
